--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
-  "name": "coinflip",
+  "name": "quizgen-frontend",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.11",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "axios": "^1.12.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^7.7.1",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "@tailwindcss/vite": "^4.1.11"
   },
   "devDependencies": {
-    "@eslint/js": "^9.32.0",
-    "@types/react": "^19.1.9",
-    "@types/react-dom": "^19.1.7",
+    "vite": "^7.1.0",
     "@vitejs/plugin-react": "^4.7.0",
     "eslint": "^9.32.0",
+    "@eslint/js": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
-    "vite": "^7.1.0"
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "globals": "^16.3.0"
   }
 }
